--- a/private/templates/layout111-common/stats.twig
+++ b/private/templates/layout111-common/stats.twig
@@ -28,6 +28,12 @@
                         <p class="title">{{ stats.videocount }}</p>
                     </div>
                 </div>
+                <div class="level-item has-text-centered">
+                    <div>
+                        <p class="heading">Views</p>
+                        <p class="title">{{ stats.viewcount }}</p>
+                    </div>
+                </div>
             </nav>
         </div>
     </section>
