--- a/private/templates/layout111-common/index.twig
+++ b/private/templates/layout111-common/index.twig
@@ -18,24 +18,26 @@
             {% for content in videos|batch(4) %}
                 <article class="columns is-centered">
                     {% for video in content %}
-                        <a href="watch?v={{ video.video_id }}">
-                            <div class="column is-one-quarter">
+                        <div class="column is-one-quarter">
+                            <a href="watch?v={{ video.video_id }}">
                                 <figure class="image is-16by9">
                                     <img src="{{ video_thumbnail(video.video_id) }}">
                                 </figure>
-                                <div class="columns is-mobile is-multiline is-gapless is-centered">
-                                    <div class="column">
-                                        <div class="image is-32x32">
-                                            <img src="{{ profile_image(video.u_name) }}" class="is-rounded">
-                                        </div>
-                                    </div>
-                                    <div class="column">
-                                        <p class="title is-6 is-spaced mt-1 mb-1">{{ video.title }}</p>
-                                        <p class="subtitle is-6">{{ userlink(video, 'u_') }}</p>
+                            </a>
+                            <div class="columns is-mobile is-multiline is-centered pt-1">
+                                <div class="column is-one-fifth pr-1">
+                                    <div class="image is-fluid">
+                                        <img src="{{ profile_image(video.u_name) }}" class="is-rounded">
                                     </div>
                                 </div>
+                                <div class="column">
+                                    <a href="watch?v={{ video.video_id }}">
+                                        <p class="title is-6 is-spaced mt-1 mb-1">{{ video.title }}</p>
+                                    </a>
+                                    <p class="subtitle is-6">{{ userlink(video, 'u_') }}</p>
+                                </div>
                             </div>
-                        </a>
+                        </div>
                     {% endfor %}
                 </article>
             {% endfor %}
