--- a/private/templates/sbnext-common/stats.twig
+++ b/private/templates/sbnext-common/stats.twig
@@ -7,6 +7,7 @@
             <div class="card-body">
                 <div style="padding:5px;">
                     <h2>{{ __("About this instance of squareBracket") }}</h2>
+                    <p>{{ __("View count may not be accurate due to deleted posts.") }}</p>
                 </div>
                 <div class="grid">
                     <div class="col-md-4">
