fix profiler hiding options button

--- a/private/scss-finalium/darkmode.scss
+++ b/private/scss-finalium/darkmode.scss
@@ -76,7 +76,7 @@ a {
   color: #ffff00;
 }
 
-.top, .footer {
+.top, .footer, .profiler {
   background-color: #111;
   border-bottom: 1px solid #333;
   border-top: 1px solid #333;
