--- a/private/scss-finalium/style.scss
+++ b/private/scss-finalium/style.scss
@@ -77,6 +77,16 @@ menu, ol, ul, il {
   }
 }
 
+.profiler {
+  background-color: $gray-100;
+  border-bottom: 1px solid $gray-200;
+  border-top: 1px solid $gray-200;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: 5px;
+}
+
 .top_forum {
   min-width: 800px;
   background-color: black;
