bing-esque main page for squarebracket

--- a/private/scss-111/style.scss
+++ b/private/scss-111/style.scss
@@ -28,3 +28,14 @@ $primary: #4A58D9;
 
 /// Load Bulma \\\
 @import "vendor/npm-asset/bulma/bulma.sass";
+
+$backgrounds: (brisbane: '/assets/project111/brisbane.jpg');
+
+@each $key, $image in $backgrounds {
+  .hero-#{$key} {
+		@extend .hero;
+		background-image: url($image);
+		background-size: cover;
+		background-position: center center;
+	}
+}
