--- a/private/templates/layout111-common/login.twig
+++ b/private/templates/layout111-common/login.twig
@@ -40,12 +40,17 @@
                                 </div>
                             </div>
                             <div class="field">
-                                <button class="button is-success" type="submit" name="loginsubmit">
-                                    Login
-                                </button>
+                                <div class="buttons is-right">
+                                    <button class="button is-primary" type="submit" name="loginsubmit">
+                                        Login
+                                    </button>
+                                </div>
                             </div>
                         </form>
                     </div>
+                </div>
+                <div class="columns is-centered">
+                    <p>Don't have an account? <a href="register.php">Register</a>.</p>
                 </div>
             </div>
         </div>
