--- a/private/templates/sbnext-common/edit.twig
+++ b/private/templates/sbnext-common/edit.twig
@@ -3,11 +3,10 @@
 {% block title %}{{ __("Edit video") }}{% endblock %}
 
 	{% block content %}
-        <form name="uploadForm" id="uploadForm" method="post" action="edit.php"
-              enctype="multipart/form-data">
+        <form name="uploadForm" id="uploadForm" method="post" action="edit.php" enctype="multipart/form-data">
             <input type="hidden" name="vid_id" value="{{ video.video_id }}">
             <h2 style="margin-bottom: 0.5em;">{{ __("Post info") }}</h2>
-            <p>{{ __("Enter the updated title and description of your post.") }}</p>
+            <p>{{ __("Enter the updated title and description of your upload.") }}</p>
             <h4 style="margin-bottom: 0.5em;">{{ __(" Title") }}</h4>
             <input type="text" class="form-control form-long uploader-form" name="title"
                    value="{{ video.title }}">
@@ -17,12 +16,10 @@
                       form="uploadForm"
                       style="overflow:hidden;resize:none" rows="3">{{ video.description }}</textarea>
             <br>
-            <!-- 						<h4 style="margin-bottom: 0.5em;">{{ __(" Tags") }}</h4>
-                <input type="text" class="form-control form-long uploader-form" name="tags" value="{{ video.tags | json_decode }}"> -->
             <br>
             <div class="right">
                 <input class="button button-primary" type="submit" id="upload" name="upload"
-                       value="{{ __("Edit") }}">
+                       value="{{ __("Save") }}">
             </div>
         </form>
     {% endblock %}
