--- a/private/templates/layout111-common/_layout.twig
+++ b/private/templates/layout111-common/_layout.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -151,7 +151,7 @@
         <h1 class="title">Project 111</h1>
         <p>squareBracket Version {{ version }} · Instance running on Git commit:
             <a href="https://github.com/chazizgrkb/squarebracket/commit/{{ git_commit() }}">{{ git_commit() }}</a></p>
-        <p><b>By the squareBracket contributors</b> · 2020-{{ 'now' | date('Y') }} |
+        <p><strong>By the squareBracket contributors</strong> · 2020-{{ 'now' | date('Y') }} |
             <a href="/statistics.php">Statistics</a> · <a href="/news.php">What's new</a></p>
     </div>
 </footer>
