--- a/private/templates/layout111-common/artwork.twig
+++ b/private/templates/layout111-common/artwork.twig
@@ -11,7 +11,7 @@
                                 <div class="tile is-parent">
                                     <article class="tile is-child notification is-primary">
                                         <figure class="image mb-2">
-                                            <img src="{{ art.videofile }}">
+                                            <img src="{{ art.videofile }}" alt="{{ art.title }} by {{ art.u_name }}">
                                         </figure>
                                         <p class="title">{{ art.title }}</p>
                                         <p class="subtitle">By {{ art.u_name }}</p>
