--- a/private/templates/layout111-common/components/smallvideobox.twig
+++ b/private/templates/layout111-common/components/smallvideobox.twig
@@ -1,7 +1,7 @@
 <article class="media">
     <figure class="media-left">
         <a href="watch.php?v={{ data.video_id }}" class="image is-16by9" style="width:16em;height:9em;">
-            <img src="{{ video_thumbnail(data.video_id) }}">
+            <img src="{{ video_thumbnail(data.video_id) }}" alt="{{ data.title }}">
         </a>
     </figure>
     <div class="media-content">
