--- a/private/templates/sbnext-common/user.twig
+++ b/private/templates/sbnext-common/user.twig
@@ -151,7 +151,7 @@
         {% if log %}
             <div class="grid" id="commentField">
                 <div class="col-md-1">
-                    <img class="rounded img-fluid" src="{{ profile_image(userdata.name) }}">
+                    <img class="rounded img-fluid" alt="{{ userdata.name }}" src="{{ profile_image(userdata.name) }}">
                 </div>
                 <div class="col-md-11">
                     <div>
