--- a/private/templates/sbnext-mobile/watch.twig
+++ b/private/templates/sbnext-mobile/watch.twig
@@ -21,14 +21,14 @@
             {% if postType == "video" %}
                 {{ include('/components/player.twig') }}
             {% elseif postType == "artwork" %}
-                <img class="img-fluid" src="{{ video.videofile }}">
+                <img class="img-fluid" src="{{ video.videofile }}" alt="{{ video.title }}">
             {% endif %}
 
             <div class="card card-body-fat" style="margin:0;border-bottom:none;padding-bottom:0;">
                 <h1>{{ video.title }}</h1>
                 <div class="grid">
                     <img src="{{ profile_image(video.u_name) }}" class="rounded"
-                         style="width:48px;float: left;margin-right:8px;">
+                         style="width:48px;float: left;margin-right:8px;" alt="{{ video.u_name }}">
                     <a href="user.php?name={{ video.u_name }}"><b
                                 style="height: 20px;display: inline-block;">{{ video.u_name }}</b></a>
                     • {{ allVideos }} {{ __("videos") }}
@@ -46,33 +46,33 @@
                     <br>
                 </div>
                 {% if userbandata != true %}
-                <div class="grid" style="margin-top:5px">
-                    <div style="margin-top:-9px;text-align: center">
-                        {# js that uses action_unlogged will only work for the like button, i found out about this quirk
+                    <div class="grid" style="margin-top:5px">
+                        <div style="margin-top:-9px;text-align: center">
+                            {# js that uses action_unlogged will only work for the like button, i found out about this quirk
                         while trying to do finalium's javascript, -grkb 8/23/2022 #}
-                        <button style="width:49%" href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}"
-                                class="button {% if rating == 1 %}button-success{% else %}button-secondary{% endif %}">
-                            {{ icon("hand-thumbs-up-fill", 20) }}
-                            <span id="likes">{{ total_likes }}</span>
-                        </button>
-                        <button style="width:49%" href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}"
-                                class="button {% if rating is same as(0) %}button-danger{% else %}button-secondary{% endif %}">
-                            {{ icon("hand-thumbs-down-fill", 20) }}
-                            <span id="dislikes">{{ total_dislikes }}</span>
-                        </button>
-                        <button style="width:99%" href="#" id="{% if log %}favorite{% else %}action_unlogged{% endif %}"
-                                class="button {% if isFavorited %}button-warning{% else %}button-secondary{% endif %}">
-                            {{ icon("star-fill", 20) }} {{ __("Favorite") }}
-                        </button>
+                            <button style="width:49%" href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}"
+                                    class="button {% if rating == 1 %}button-success{% else %}button-secondary{% endif %}">
+                                {{ icon("hand-thumbs-up-fill", 20) }}
+                                <span id="likes">{{ total_likes }}</span>
+                            </button>
+                            <button style="width:49%" href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}"
+                                    class="button {% if rating is same as(0) %}button-danger{% else %}button-secondary{% endif %}">
+                                {{ icon("hand-thumbs-down-fill", 20) }}
+                                <span id="dislikes">{{ total_dislikes }}</span>
+                            </button>
+                            <button style="width:99%" href="#" id="{% if log %}favorite{% else %}action_unlogged{% endif %}"
+                                    class="button {% if isFavorited %}button-warning{% else %}button-secondary{% endif %}">
+                                {{ icon("star-fill", 20) }} {{ __("Favorite") }}
+                            </button>
+                        </div>
+                        <h3>{{ viewCount }} {{ __("views") }}</h3>
+                        <div class="tab">
+                            <button class="tablinks active" onclick="openTab(event, 'About')"
+                                    id="defaultOpen">{{ __("About") }}</button>
+                            <button class="tablinks"
+                                    onclick="openTab(event, 'Stats')">{{ icon("bar-chart-fill", 12) }}</button>
+                        </div>
                     </div>
-                    <h3>{{ viewCount }} {{ __("views") }}</h3>
-                    <div class="tab">
-                        <button class="tablinks active" onclick="openTab(event, 'About')"
-                                id="defaultOpen">{{ __("About") }}</button>
-                        <button class="tablinks"
-                                onclick="openTab(event, 'Stats')">{{ icon("bar-chart-fill", 12) }}</button>
-                    </div>
-                </div>
                 {% endif %}
             </div>
             <div class="card card-body-fat">
@@ -113,7 +113,7 @@
                     {% if log and userbandata != true %}
                         <div class="grid" id="commentField">
                             <div class="col-md-2">
-                                <img class="rounded img-fluid" src="{{ profile_image(userdata.name) }}">
+                                <img class="rounded img-fluid" src="{{ profile_image(userdata.name) }}" alt="{{ userdata.name }}">
                             </div>
                             <div class="col-md-10">
                                 <div>
