--- a/private/templates/layout111-common/user.twig
+++ b/private/templates/layout111-common/user.twig
@@ -15,7 +15,7 @@
             <div class="columns is-vcentered">
                 <div class="column is-narrow">
                     <div class="image is-128x128">
-                        <img src="{{ profile_image(userpagedata.name) }}" class="is-rounded">
+                        <img src="{{ profile_image(userpagedata.name) }}" alt="{{ userpagedata.name }}" class="is-rounded">
                     </div>
                 </div>
                 <div class="column">
