--- a/private/templates/sbnext-common/_error.twig
+++ b/private/templates/sbnext-common/_error.twig
@@ -5,9 +5,6 @@
 	{% block content %}
         <div class="bg-dark" style="max-width:700px;margin:auto;padding:20px;padding-bottom:100px;color:white;">
             <h2>{{ err_message }}</h2>
-            <hr>
-            <p>{{ __("Sorry about that.") }}</p>
-            <div style="text-align:center;margin:auto"><img src="../assets/logo_monochrome.png"
-                                                            style="max-width:150px;"></div>
+            <div style="text-align:center;margin:auto"><img src="../assets/logo_monochrome.png" alt="squareBracket" style="max-width:150px;"></div>
         </div>
     {% endblock %}
