--- a/private/templates/sbnext-common/_layout_chaziz.twig
+++ b/private/templates/sbnext-common/_layout_chaziz.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ __("en-US") }}">
 <head>
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %} - squareBracket</title>
