--- a/private/templates/sbnext-desktop/watch.twig
+++ b/private/templates/sbnext-desktop/watch.twig
@@ -25,124 +25,117 @@
                 {% elseif postType == "artwork" %}
                     <img class="img-fluid" src="{{ video.videofile }}" alt="{{ video.title }}">
                 {% endif %}
-
-                <div class="card card-body-fat" style="margin:0;border-bottom:none;padding-bottom:0;">
-                    <div class="grid">
-                        <div class="col-md-8">
-                            <a href="user.php?name={{ video.u_name }}"><img src="{{ profile_image(video.u_name) }}"
-                                                                            class="rounded"
-                                                                            style="width:60px;float: left;margin-right:8px;"
-                                                                            alt="{{ video.u_name }}"></a>
-                            <span style="font-size:1.15em;"><a
-                                        href="user.php?name={{ video.u_name }}">{{ video.u_name }}</a> • {{ allVideos }} {{ __("videos") }}</span>
-                            <br>
-                            <span>{{ __("Published on %s", [video.time | date('M j, Y')]) }} • {{ viewCount }} {{ __("views") }}</span>
-                            <br>
-                            {% if userbandata != true %}
-                                {% if userdata.id == video.author %}<a
-                                    class="button button-secondary button-small"
-                                    href="/edit.php?v={{ video.video_id }}">{{ __("Edit") }}</a>{% else %}
-                                    <button id="subscribe-watch"
-                                            class="button button-{% if subscribed %}secondary{% else %}primary{% endif %} button-small"
-                                            type="button"
-                                            {% if not log or userdata.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% else %}{{ __("Follow") }}{% endif %}</button>
-                                    <div class="subscribe-count">{{ subCount }}</div>
+                {% if theme != 'nostalgia' %}
+                    <div class="card card-body-fat" style="margin:0;border-bottom:none;padding-bottom:0;">
+                        <div class="grid">
+                            <div class="col-md-8">
+                                <a href="user.php?name={{ video.u_name }}"><img src="{{ profile_image(video.u_name) }}"
+                                                                                class="rounded"
+                                                                                style="width:60px;float: left;margin-right:8px;"
+                                                                                alt="{{ video.u_name }}"></a>
+                                <span style="font-size:1.15em;"><a
+                                            href="user.php?name={{ video.u_name }}">{{ video.u_name }}</a> • {{ allVideos }} {{ __("videos") }}</span>
+                                <br>
+                                <span>{{ __("Published on %s", [video.time | date('M j, Y')]) }} • {{ viewCount }} {{ __("views") }}</span>
+                                <br>
+                                {% if userbandata != true %}
+                                    {% include "components/watch_subscribe.twig" %}
                                 {% endif %}
+                                <br>
+                            </div>
+                            {% if userbandata != true %}
+                                <div class="col-md-4 right">
+                                    {% include "components/watch_ratings.twig" %}
+                                </div>
                             {% endif %}
-                            <br>
                         </div>
-                        {% if userbandata != true %}
-                            <div class="col-md-4 right">
-                                <div>
-                                    <button href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}"
-                                            class="button {% if rating == 1 %}button-success{% else %}button-secondary{% endif %}">
-                                        {{ icon("hand-thumbs-up-fill", 20) }}
-                                        <span id="likes">{{ total_likes }}</span>
-                                    </button>
-                                    <button href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}"
-                                            class="button {% if rating is same as(0) %}button-danger{% else %}button-secondary{% endif %}">
-                                        {{ icon("hand-thumbs-down-fill", 20) }}
-                                        <span id="dislikes">{{ total_dislikes }}</span>
-                                    </button>
-                                    <button href="#" id="{% if log %}favorite{% else %}action_unlogged{% endif %}"
-                                            class="button {% if isFavorited %}button-warning{% else %}button-secondary{% endif %}">
-                                        {{ icon("star-fill", 20) }}
-                                    </button>
+                        <div class="grid" style="margin-top:5px;">
+                            <div class="right">
+                                <div class="tab">
+                                    <button class="tablinks active" onclick="openTab(event, 'About')"
+                                            id="defaultOpen">{{ __("About") }}</button>
+                                    <button class="tablinks"
+                                            onclick="openTab(event, 'Stats')">{{ icon("bar-chart-fill", 12) }}</button>
                                 </div>
                             </div>
-                        {% endif %}
-                    </div>
-                    <div class="grid" style="margin-top:5px;">
-                        <div class="right">
-                            <div class="tab">
-                                <button class="tablinks active" onclick="openTab(event, 'About')"
-                                        id="defaultOpen">{{ __("About") }}</button>
-                                <button class="tablinks"
-                                        onclick="openTab(event, 'Stats')">{{ icon("bar-chart-fill", 12) }}</button>
-                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="card card-body-fat">
-                    <div class="grid">
-                        <div class="col-md-12">
-                            <div id="About" class="tabcontent" style="display: block;">
-                                <p><b>{{ __("Published on %s", [video.time | date('M j, Y')]) }}</b></p>
-                                <p>{{ video.description }}</p>
-                                <div class="description-extra">
-                                    <ul>
+                    <div class="card card-body-fat">
+                        <div class="grid">
+                            <div class="col-md-12">
+                                <div id="About" class="tabcontent" style="display: block;">
+                                    <p><b>{{ __("Published on %s", [video.time | date('M j, Y')]) }}</b></p>
+                                    <p>{{ video.description }}</p>
+                                    <div class="description-extra">
+                                        <ul>
+                                            <li>
+                                                <h4 class="title">{{ __("Category:") }}</h4>
+                                                <div class="content">{{ video.category_id | category_id_to_name() }}</div>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div id="Stats" class="tabcontent" style="display: none;">
+                                    <h2>{{ __("Statistics") }}</h2>
+                                    <ul style="padding:0">
                                         <li>
-                                            <h4 class="title">{{ __("Category:") }}</h4>
-                                            <div class="content">{{ video.category_id | category_id_to_name() }}</div>
+                                            {{ __("Rating ratio:") }} {{ videoRatio }}%
+                                        </li>
+                                        <li>
+                                            {{ __("Last viewed:") }} {{ recentView | relative_time }}
+                                        </li>
+                                        <li>
+                                            {{ __("Favorites:") }} {{ total_favorites }}
                                         </li>
                                     </ul>
                                 </div>
                             </div>
-                            <div id="Stats" class="tabcontent" style="display: none;">
-                                <h2>{{ __("Statistics") }}</h2>
-                                <ul style="padding:0">
-                                    <li>
-                                        {{ __("Rating ratio:") }} {{ videoRatio }}%
-                                    </li>
-                                    <li>
-                                        {{ __("Last viewed:") }} {{ recentView | relative_time }}
-                                    </li>
-                                    <li>
-                                        {{ __("Favorites:") }} {{ total_favorites }}
-                                    </li>
-                                </ul>
-                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="card-body-fat">
-                        <h3>{{ __("Comments") }} ({{ comCount }})</h3>
-                        {% if log and userbandata != true %}
-                            <div class="grid" id="commentField">
-                                <div class="col-md-1">
-                                    <img class="rounded img-fluid" src="{{ profile_image(userdata.name) }}" alt="{{ userdata.name }}">
-                                </div>
-                                <div class="col-md-11">
-                                    <div>
-                        <textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3"
-                                  placeholder="{{ __("Enter comment here.") }}"></textarea>
-                                    </div>
-                                    <div class="right">
-                                        <button id="post" class="button button-primary"
-                                                style="margin-bottom:0;">{{ __("Comment") }}</button>
-                                    </div>
-                                </div>
-                            </div>
-                        {% endif %}
-                        <div id="comment"></div>
-                        {% for comment in comments %}
-                            {{ comment(comment) }}
-                        {% endfor %}
+                    <div class="card">
+                        <div class="card-body-fat">
+                            <h3>{{ __("Comments") }} ({{ comCount }})</h3>
+                            {% if log and userbandata != true %}
+                                {% include "components/comment_form.twig" %}
+                            {% endif %}
+                            <div id="comment"></div>
+                            {% for comment in comments %}
+                                {{ comment(comment) }}
+                            {% endfor %}
+                        </div>
                     </div>
-                </div>
+                {% else %}
+                    <h4 style="color: gray;font-weight:bold;">{{ __("Comment on this video:") }}</h4>
+                    {% if log and userbandata != true %}
+                        {% include "components/comment_form.twig" %}
+                    {% endif %}
+                    <div id="comment"></div>
+                    {% for comment in comments %}
+                        {{ comment(comment) }}
+                    {% endfor %}
+                {% endif %}
             </div>
             <div class="col-md-4">
+                {% if theme == 'nostalgia' %}
+                    <div class="card">
+                        <div class="card-header">{{ __("About this video") }}</div>
+                        <div class="card-body">
+                            <a href="user.php?name={{ video.u_name }}"><img src="{{ profile_image(video.u_name) }}"
+                                                                            class="rounded"
+                                                                            style="width:48px;float: left;margin-right:8px;"
+                                                                            alt="{{ video.u_name }}"></a>
+                            <p><strong>{{ __("Published on %s", [video.time | date('M j, Y')]) }}
+                                    <br>{{ __("by") }} {{ userlink(video, "u_") }}</strong> ({{ allVideos }} {{ __("videos") }})
+                            </p>
+                            <p>
+                                {{ video.description }}
+                            </p>
+                            <p>
+                                {% include "components/watch_subscribe.twig" %}
+                            </p>
+                        </div>
+                    </div>
+                {% endif %}
                 <div class="card">
                     <div class="card-body">
                         {% for related_video in related_videos %}
